Further work, commit messages are for the day job

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>hmm</title>
+    <title>League of Lines</title>
   </head>
   <body>
-    <script type="module" src="src/not-owned.js"></script>
+    <script type="module" src="src/league-of-lines.js"></script>
   </body>
 </html>
